--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,9 +13,8 @@ services:
     # depends_on:
     #   - database
     volumes:
-      - ${CODE_DIR}:${CODE_DIR}:rw
-      - ${SSH_DIR}:${SSH_DIR}:ro
-      - ${VIM_SETUP}:${VIM_SETUP}:ro
-      - ${NVIM_SETUP}:${NVIM_SETUP}:ro
-      - ${NVIM_COC_SETUP}:${NVIM_COC_SETUP}:ro
-      - ${GIT_CONFIG}:${GIT_CONFIG}:ro
+      - ${CODE_DIR_LOCAL}:${CODE_DIR_IMAGE}:rw
+      - ${SSH_DIR_LOCAL}:${SSH_DIR_IMAGE}:rw
+      - ${VIM_SETUP_LOCAL}:${VIM_SETUP_IMAGE}:ro
+      - ${DOT_CONFIG_LOCAL}:${DOT_CONFIG_IMAGE}:ro
+      - ${GIT_CONFIG_LOCAL}:${GIT_CONFIG_IMAGE}:ro
